# recommender-system

./: .gitignore  CLAUDE.md  Dockerfile.postgres  Dockerfile.spark  README.md  docker-compose.yml  main.py  pyproject.toml
db/: schema.sql
notebooks/: 01_dataset_exploration.ipynb  02_train_model.ipynb  03_play_with_postgresql.ipynb  04_spark_dataframe_operations.ipynb  05_spark_sql.ipynb  06_aggregations_and_transformations.ipynb  07_data_partitioning.ipynb  08_mllib_als_deep_dive.ipynb  09_structured_streaming.ipynb  10_graph_processing.ipynb  11_advanced_mllib.ipynb  12_performance_and_internals.ipynb  13_data_engineering_etl.ipynb  14_integration_projects.ipynb  15_hdfs_fundamentals.ipynb  16_hdfs_spark_storage_strategies.ipynb  17_hbase_fundamentals.ipynb  18_hbase_serving_layer.ipynb  19_trino_federated_queries.ipynb  20_trino_advanced_analytics.ipynb  21_flink_vs_spark_streaming.ipynb  22_flink_sql_table_api.ipynb  23_nifi_data_flows.ipynb  24_nifi_kafka_spark_integration.ipynb  25_data_governance_atlas.ipynb  26_security_ranger.ipynb  27_zeppelin_data_science_hub.ipynb  start.ipynb
notebooks/als_model/itemFactors/: .part-00000-934232af-64c3-4faf-87d9-ee648a5b9b88-c000.snappy.parquet.crc  .part-00001-934232af-64c3-4faf-87d9-ee648a5b9b88-c000.snappy.parquet.crc  .part-00002-934232af-64c3-4faf-87d9-ee648a5b9b88-c000.snappy.parquet.crc  .part-00003-934232af-64c3-4faf-87d9-ee648a5b9b88-c000.snappy.parquet.crc  .part-00004-934232af-64c3-4faf-87d9-ee648a5b9b88-c000.snappy.parquet.crc  (+15 more)
scripts/: load_data.sh
web/: package-lock.json  package.json
(+22 files in other folders)
