[project]
name = "recommender-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "jupyter>=1.1.1",
    "kaggle>=1.8.3",
    "kagglehub>=0.4.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pyspark>=4.1.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.34.0",
]
